Atualiza o projeto Swift Gamificação com melhorias na tela do dashboard, incluindo a implementação de um novo layout responsivo, ajustes na tipografia e na exibição de informações do usuário. Atualiza a biblioteca Font Awesome para a versão 6.4.2 e remove estilos CSS obsoletos. Adiciona novas funcionalidades de gerenciamento de missões e notificações, além de melhorias na lógica de roteamento e gerenciamento de estado.

--- a/src/assets/css/screens/footer.css
+++ b/src/assets/css/screens/footer.css
@@ -34,7 +34,7 @@
   font-weight: var(--font-weight-normal);
 }
 .footer .footer-content {
-  flex-direction: column;
+  flex-direction: row;
   gap: var(--spacing-sm);
 }
 
@@ -53,6 +53,10 @@
 
   .footer-content div {
     font-size: calc(var(--font-size-sm) - 1px);
+  }
+
+  .footer .footer-content {
+    flex-direction: column;
   }
 }
 */
